# Personal-Finance-Manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  JENKINS_DEPLOYMENT.md  Jenkinsfile  Makefile  README.md  TESTING.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  inventory.ini  main.py  models.py  playbook.yml  pyproject.toml  requirements.txt  run_tests.py
.github/: pull_request_template.md
src/: app.py  main.py  models.py
src/controllers/: auth_route.py  dashboard_route.py  expense_route.py
src/instance/: expenses.db
src/models/: expense.py  user.py
src/templates/: 404.html  500.html  base.html  debts.html  edit_expense.html  expenses.html  index.html  login.html  new_expense.html  summary.html
src/utils/: db_init.py  decorators.py
tests/: conftest.py  test_auth.py  test_models.py  test_routes.py  test_utils.py
